--- a/output/refs.bib
+++ b/output/refs.bib
@@ -22,6 +22,14 @@
 	volume = "13",
 	pages = "140--143"
 }
+@article{fatou,
+	author = "Peirre Fatou",
+	title = "Séries trigonométriques et séries de Taylor",
+	journal = "Acta Math.",
+	year = 1906,
+	volume = "39",
+	pages = "335--400"
+}
 @book{rudin2,
 	author = "Walter Rudin",
 	title = "Real and Complex Analysis",
@@ -58,6 +66,13 @@
 	author = "Walter Rudin",
 	title = "Function Theory in the Unit Ball of $\mathbb{C}^n$",
 	publisher = "Springer-Verlag",
+	year = 1980,
+}
+@book{munkres,
+	author = "James Raymond Munkres",
+	title = "Topology",
+	publisher = "Prentice Hall, Inc",
+	edition = "2nd",
 	year = 1980
 }
 @unpublished{reynir,
