--- a/verkefni.tex
+++ b/verkefni.tex
@@ -263,11 +263,16 @@ To achieve this some study of the Poisson kernel is needed.
 The Poisson kernel is classically used to find harmonic function on the unit disk given continuous boundary values.
 It is used to this end in the proof of the Rudin-Carleson theorem present in this thesis, but its place in the proof of the F. and M. Riesz theorem is less standard.
 
-The Rudin-Carleson theorem is then proved in section \ref{section2}.
+The Rudin-Carleson theorem is proved in section \ref{section2}.
 It is done in the same way Rudin did in his original paper.
 Some effort is put into showing the existence of a continuous integrable function on $\mathbb{T}$ that takes value $\infty$ at exactly a closed set of Lebesgue-measure zero.
+
+In section \ref{section3} Bishop's generalization of the Rudin-Carleson theorem is stated and proved.
+This is also done in the same way Bishop did it in his paper.
+The original Rudin-Carleson theorem is then shown to be a corollary of Bishop's theorem and the F. and M. Riesz theorem.
+
+The final section, section \ref{section4}, looks at how Bishop's theorem fits into complex analysis in several variables.
 \section{Notation}
-% TODO define 'extends'
 We denote by $\mathcal{O}(U)$ the family of holomorphic functions on $U$ for open set $U$.
 We denote by $C(X)$ the family of continuous functions from $X$ to $\mathbb{C}$ for some topological space $X$.
 We will use $\mathbb{D}$ to refer to the open unit disk $\{z \in \mathbb{C};\ |z| < 1\}$.
@@ -327,8 +332,29 @@ It so happens that defining $\lambda$ by
 yields a measure.
 This measure is referred to as \emph{the total variation of $\mu$} and denoted by $|\mu|$ (for example, $|\mu|(E)$).
 A proof that $|\mu|$ is a measure and more detail on complex measures can be found in chapter $6$ of \citep{rudin2}. 
+A useful property of the total variation of $\mu$ is that $\mu \lll |\mu|$, that is a $|\mu|$-null set is also a $\mu$-null set.
 
-% TODO spjall
+Let $\mu$ and $\lambda$ be measures on a common $\sigma$-algebra.
+We define
+\[
+	(\mu + \lambda)(E) = \mu(E) + \lambda(E) \text{ and } (c\mu)(E) = c\mu(E)
+\]
+for any scalar $c$ and measurable $E$.
+Both of these are obviously measures so the measures on a common $\sigma$-algebra form a vector space.
+Said vector space is also normed with the norm $\|\mu\| = |\mu|(X)$, where $X$ is the measure space $\mu$ is defined on.
+
+We won't get far with complex measures without defining integration.
+A corollary of the Radon-Nikodym theorem is the existence of a function $h$ whose image is wholly on $\mathbb{T}$ such that
+\[
+	d\mu = h\ d|\mu|.
+\]
+This can be seen as a decomposition of $\mu$ into polar form.
+With this in mind we define integration with regards to a complex measure by
+\[
+	\int_E f\ d\mu = \int_E fh\ d|\mu|.
+\]
+
+We will later use the following definition to characterize sets if a family of functions is given.
 \begin{definition}
 \label{annilatingmeasure}
 Let $\mu$ be a measure and $B$ be a family of measurable function defined on a measurable space $X$.
@@ -338,7 +364,9 @@ We say the $\mu$ is an \emph{annihilating measure} of $B$ if
 \]
 for all $f$ in $B$. We denote the family of all annihilating measure of $B$ by $B^{\bot}$.
 \end{definition}
-\section{Complex analysis in one variable}
+We will specifically be interested in sets that are \emph{$B^{\bot}$-null}.
+That is, sets that have measure zero with regards to all annihilating measures of $B$.
+\section{Complex analysis}
 \subsection{The disk algebra}
 \begin{definition}
 A function is said to be in the \emph{disk algebra} if it is holomorphic on $\mathbb{D}$ and continuous on $\mathbb{\overline{\mathbb{D}}}$.
@@ -347,7 +375,9 @@ We will refer to this family of function $\mathcal{A}$.
 It can be shown using Morera's theorem that a sequence of holomorphic function that converges uniformly has a holomorphic limit \citep{reynir}.
 The same holds for continuous functions.
 So, naturally, we conclude that a sequence of functions in $\mathcal{A}$ that converges uniformly has a limit in $\mathcal{A}$.
-\subsection{Carathéodory} % TODO maybe combine this subsection with the RMP subsection
+\subsection{The Riemann Mapping Theorem} 
+The Riemann Mapping Theorem is a powerful tool that often allows us to move results on the open unit disk to more general simply connected domains.
+We can use a famous theorem of Carathéodory to achieve similar results for the closed unit disk.
 \begin{definition}
 A continuous function $\gamma: [0, 1] \rightarrow \mathbb{C}$ is said to be a \emph{Jordan curve} if $\gamma(0) = \gamma(1)$ and
 \[
@@ -358,22 +388,23 @@ The definition above can be restated as: A Jordan curve is a closed simple curve
 The term `simple' here means that the curve is not self-intersecting.
 The name stems from a famous result by Camille Jordan stating that $\mathbb{C} \setminus \gamma([0, 1])$ has two connected component, one of which is simply connected.
 The simply connected component will be called \emph{the domain bounded by $\gamma$}.
-The proof of this result is rather technical and outside the scope of this thesis \citep{whyburn, greenkrantz}. % TODO add citation to whyburn chapter 3 and green-krantz p. 393
+The proof of this result is rather technical and outside the scope of this thesis \citep{munkres, greenkrantz}.
 The result is however necessary to make statement such as `let $U$ be the domain bounded by $\gamma$'.
 An example of this is the following theorem:
 \begin{theorem}[Carathéodory]
 Let $\Omega_1$ and $\Omega_2$ be domains in $\mathbb{C}$ each bounded by a Jordan curve and $\Phi: \Omega_1 \rightarrow \Omega_2$ be a conformal mapping.
 There exists a continuous injection $\hat{\Phi}: \overline{\Omega_1} \rightarrow \overline{\Omega_2}$ that extends $\Phi$.
 \end{theorem}
-A proof of this can be found in section $13.2$ of \citep{greenkrantz}. % TODO motivate the theorem a bit
-\subsection{The Riemann Mapping Theorem} 
-We will start of with a definition. % TODO reword
+A proof of this can be found in section $13.2$ of \citep{greenkrantz}.
+
+To `move results on the open unit disk to more general simply connected domains' as described earlier we first have to nail down what properties we have an interest in.
+In complex analysis that is usually holomorphicity.
+The bijections that preserve holomorphicity are therefore of interest, but since the composition of holomorphic functions is holomorphic we only need the following:
 \begin{definition}
 A map $f: U \rightarrow V$, with open $U, V \subset \mathbb{C}$ is said to be \emph{conformal} if it is holomorphic, bijective, and its inverse is holomorphic.
 \end{definition}
-The fact that the inverse is homomorphic is actually redundant.
-It can be shown that a holomorphic bijection has a holomorphic inverse.
-\citep{greenkrantz}
+The fact that the inverse is holomorphic is actually redundant.
+It can be shown that a holomorphic bijection has a holomorphic inverse \citep{greenkrantz}.
 \begin{theorem}[Riemann mapping theorem \citep{greenkrantz}]
 If $U \subset \mathbb{C}$, $U \neq \mathbb{C}$ is homeomorphic to $\mathbb{D}$ then there exists a conformal mapping from $\mathbb{D}$ to $U$.
 \end{theorem}
@@ -385,7 +416,7 @@ The Riemann mapping theorem gives us $\Phi_1$, a conformal mapping from $\mathbb
 The desired conformal mapping from $U$ to $V$ is then $\Phi_2 \circ \Phi_1^{-1}$.
 \end{proof}
 In this thesis the disk algebra $\mathcal{A}$ is of special interest so a version of the Riemann mapping theorem that considers continuity at the boundary is desirable.
-We can combine the Riemann mapping theorem and Carathéodory's theorem to achieve the desired theorem.
+We can combine the Riemann mapping theorem and Carathéodory's theorem to achieve the desired result.
 The only thing to prove is that a homeomorphism $f$ maps the boundary of a bounded set $U$ to the boundary of $f(U)$ and that a Jordan curve under a homeomorphism is still a Jordan curve.
 \begin{corollary}
 \label{contrmt}
@@ -395,7 +426,7 @@ If $K$ is homeomorphic to $\overline{\mathbb{D}}$ then there exists a continuous
 First, let $U$ be a bounded, open set in $\mathbb{C}$,
 	$f: \overline{U} \rightarrow \mathbb{C}$ be an injective continuous map,
 	and let's show that $\partial f(U) = f(\partial U)$.
-Let $p \in \partial U$ and $B_r(z) = \{z \in \mathbb{C};\ |r - z| < r\}$. % TODO maybe move the ball definition into intro.
+Let $p \in \partial U$ and $B_r(z) = \{z \in \mathbb{C};\ |r - z| < r\}$.
 Let's also assume that $f(p)$ is in the interior of $f(U)$ and show that it leads to a contradiction.
 There exists an $r > 0$ such that $B_r(p) \subset f(U)$, because the interior of a set is always open.
 This gives us as an open neighbourhood $f^{-1}(B_r(p)) \subset U$ of $p$, but $p \in \partial U$ implies that no such neighbourhood exists.
@@ -424,10 +455,14 @@ So $\Phi$ is a conformal map between two domains, each bounded by a Jordan curve
 This allows us to use Carathéodory's theorem to extend $\Phi$ continuously and injectively to $\overline{\mathbb{D}}$, concluding the proof.
 \end{proof}
 The Riemann mapping theorem is a strong tool when analyzing holomorphic functions on simply connected domains.
-We can often solve things for the unit disk (or unit square as in \ref{rudincarleson}) and then map that solution to a general simply connected domain. % TODO add ref
+We can often solve things for the unit disk (or unit square as in \ref{rudincarleson}) and then map that solution to a general simply connected domain.
 
+\subsection{Complex analysis in several variables}
 We will briefly touch on multivariate complex analysis so we will need a definition of a holomorphic function in $\mathbb{C}^n$.
 If $U \subset \mathbb{C}^n$ is open and $f: U \rightarrow \mathbb{C}$ such that $f$ is holomorphic in each variable separately we say that $f$ is \emph{holomorphic on $U$}.
+We will also denote common sets by there counterpart single variate complex analysis with an added `$n$' in the superscript.
+This does not denote an $n$-fold Cartesian product.
+For example $\mathbb{T}^2$ is not the same as $\mathbb{T} \times \mathbb{T}$.
 \section{Functional analysis}
 \begin{definition}
 Let $X$ be a topological space.
@@ -478,7 +513,6 @@ The space $L^p(X, \mu)$ has one major benefit over $\mathcal{L}^p(X, \mu)$,
 is a norm on $L^p(X, \mu)$.
 We sometimes write $L^p(\mu)$ if the space in question is obvious from context and $L^p(X)$ if the measure is obvious from context.
 \subsection{Hahn-Banach}
-% TODO sjpall
 There are many related theorems going by the name `Hahn-Banach Theorem'.
 These are sometimes split in two groups, `separation theorems' and `extension theorems'.
 When proving \ref{bishopstheorem} we need the following Hahn-Banach separation theorem:
@@ -545,8 +579,7 @@ The main result of this section is that the annihilating measures of
 \]
 are absolutely continuous with respect to the Lebesgue measure.
 We will show this to be a corollary of the F. and M. Riesz theorem, which we will prove in the manner of \citep{rudin2}.
-To attain the main result of this section we need some lemmas and definitions. %TODO rewrite these two lines
-To prove one of the lemmas we will also use the following two famous theorems:
+We will start off with two famous theorems from analysis. 
 \begin{definition}
 Let $\mathcal{F}$ be a family of complex functions on a metric space $(X, d)$.
 
@@ -562,6 +595,14 @@ We say that the family is \emph{equicontinuous} if for all $\varepsilon > 0$ the
 \]
 Note here that $\delta$ is globally defined and only dependent on $\varepsilon$.
 \end{definition}
+
+The following theorems are focused on the existence of convergent subsequences.
+We will therefore, for some $S \subset \mathbb{N}$, define
+\[
+	\lim_{n \in S} a_n = \lim_{n \in \mathbb{N}} a_{s_n}
+\]
+where $s_k$ is the $k$-th smallest element of $S$.
+In a similar manner we define the sequence $(a_n)_{n \in S}$ to be $(a_{s_n})_{n \in \mathbb{N}}$ with $s_k$ defined in the same manner as earlier.
 \begin{theorem}[Bolzano-Weierstrass]
 %                                                                                           v This has to be weak because of (M, M, M, M, M, M, ...)
 Let $(a_n)_{n \in \mathbb{N}}$ be a sequence of numbers in $\mathbb{R}^n$, such that $|a_n| < M < \infty$, for all $k \in \mathbb{N}$.
@@ -614,13 +655,11 @@ To show the result for $\mathbb{R}^n$ we can start by finding a subsequence such
 We can then choose a subsequence thereof such that the second coordinate is also convergent.
 Now the first two coordinates are convergent.
 If we do this $n - 2$ more times we get a desired subsequence.
-% TODO What does (a_n)_{n \in S} mean????
 \end{proof}
-\begin{remark}
-The theorem above clearly holds for sequences in $\mathbb{C}$ as well.
-\end{remark}
+We are mostly concerned with the case $n = 2$ since our concern is with $\mathbb{C}$.
 \begin{theorem}[Ascoli-Arzela]
-Let $\mathcal{F}$ be a pointwise bounded equicontinuous collection of complex functions on a metric space $(X, d)$, and $X$ contains a countable dense subset.  %TODO change to 'X is separable'
+Let $\mathcal{F}$ be a pointwise bounded equicontinuous collection of complex functions on a metric space $(X, d)$, and $X$ is seperable.
+Recall that $X$ is seperable if it contains a countable dense subset.
 Then every sequence in $\mathcal{F}$ contains a subsequence that converges uniformly on every compact subsets of $X$.
 \end{theorem}
 \begin{proof}
@@ -649,7 +688,7 @@ Equicontinuity gives us a $\delta > 0$ such that $d(x, y) < \delta$ implies that
 Let's now cover $K$ with $m$ balls of radius $\delta /2$ and call the $k$-th ball $B_k$.
 We can now set $p_k$ as a point in $B_k \cap E$.
 This point exists because $E$ is dense in $X$.
-Pointwise convergence on $E$ let's us chose an $N$ such that $|f_{n_1}(p_k) - f_{n_2}(p_k)| < \varepsilon /3$ for $k = 1, 2, ..., m$ and all $n_1, n_2 > N$.
+Pointwise convergence on $E$ lets us chose an $N$ such that $|f_{n_1}(p_k) - f_{n_2}(p_k)| < \varepsilon /3$ for $k = 1, 2, ..., m$ and all $n_1, n_2 > N$.
 Let's conclude by setting $x \in K$.
 Then there is a $k$ such that $x \in B_k$ and thus $d(x, p_k) < \delta$.
 The choice of $\delta$ and $N$ then gives us that
@@ -660,14 +699,17 @@ The choice of $\delta$ and $N$ then gives us that
 	& = \varepsilon.
 \end{align*}
 \end{proof}
-% TODO spjall
+
+We will need a few results from the study of Poisson integrals to prove the F. and M. Riesz theorem.
+It will be of great use for us to take, for some $0 < r < 1$, a function defined on $r\mathbb{T}$ and stretch it to be defined on $\mathbb{T}$.
+Concretely, if $f: r\mathbb{T} \rightarrow \mathbb{C}$ then $f_r: \mathbb{T} \rightarrow \mathbb{C}$ is defined by $f_r(z) = f(rz)$.
+We will reserve the subscripted `$r$' for this usage.
 \begin{definition}
-% Poisson kernel, Poisson integral, Poisson integral of a measure.
 The function
 \[
 	P_r(t) = \sum_{n \in \mathbb{Z}} r^{|n|}e^{int}
 \]
-for $0 \leq r < 1$, $t \in \mathbb{R}$, is referred to as \emph{the Poisson kernel on $\mathbb{D}$}, or sometimes simply \emph{the Poisson kernel}.
+for $0 \leq r < 1$, $t \in \mathbb{R}$, is referred to as \emph{the Poisson kernel on $\mathbb{D}$}, or simply \emph{the Poisson kernel}.
 We also rewrite $P_r(\theta - t)$ by setting $z = re^{it}$ as
 \[
 	P(z, e^{it}) = \frac{1 - |z|^2}{|e^{it} - z|^2}.
@@ -677,19 +719,17 @@ This stems from the fact that
 	P_r(\theta - t) = \Re \left ( \frac{e^{it} + z}{e^{it} - z}\right ) = \frac{1 - r^2}{1 - 2r\cos(\theta - r) + r^2}.
 \]
 
-% TODO reword to include the domain
-For $f \in L^1(\mathbb{T})$ we define \emph{the Poisson integral of $f$} by % TODO define L^1
+For $f \in L^1(\mathbb{T})$ we define \emph{the Poisson integral of $f$} as the function defined on $\mathbb{D}$ by
 \[
 	P[f](z) = \frac{1}{2\pi} \int_{-\pi}^{\pi} f(e^{it})P(z, e^{it})\ dt.
 \]
 
-For complex measure $\mu$ we define \emph{the Poisson integral of $\mu$} by
+For complex measure $\mu$ we define \emph{the Poisson integral of $\mu$} as the function defined on $\mathbb{D}$ by
 \[
-	P[d\mu](z) = \int_T P(z, e^{it})\ d\mu(e^{it}).
+	P[d\mu](z) = \int_{\mathbb{T}} P(z, e^{it})\ d\mu(e^{it}).
 \]
 
 Let's take a look at some of the properties of the Poisson kernel and Poisson integral.
-Note that both $P[f]$ and $P[d\mu]$ are defined on $\mathbb{D}$ because of the way we defined the Poisson kernel.
 \end{definition}
 We see that, since
 \[
@@ -715,24 +755,23 @@ so
 This naturally leads us to the following lemma:
 \begin{lemma}
 \label{FMRlemma1}
-Let $\mu$ be a complex Borel measure, and $u = P[d\mu]$.
+Let $\mu$ be a complex measure, and $u = P[d\mu]$.
 Then
 \[
 	\|u_r\|_1 \leq \|\mu\|.
 \]
 \end{lemma}
 \begin{proof}
-% TODO reword this part
-We have that
+This can be obtained by simple computations
 \begin{align*}
 	\|u\|_1
 	&= \frac{1}{2\pi} \int_{-\pi}^{\pi} |u(re^{i\theta})|\ d\theta\\
 	&= \frac{1}{2\pi} \int_{-\pi}^{\pi} \left | \int_{\mathbb{T}} P(re^{i\theta}, e^{it})\ d\mu(e^{it}) \right | d\theta\\
-	&\leq \frac{1}{2\pi} \int_{-\pi}^{\pi} \int_{\mathbb{T}} P(re^{i\theta}, e^{it})\ d|\mu(e^{it})| d\theta\\ % TODO add this to prelim
+	&\leq \frac{1}{2\pi} \int_{-\pi}^{\pi} \int_{\mathbb{T}} P(re^{i\theta}, e^{it})\ d|\mu(e^{it})| d\theta\\
 	&= \int_{\mathbb{T}} \frac{1}{2\pi} \int_{-\pi}^{\pi} P(re^{i\theta}, e^{it})\ d\theta d|\mu(e^{it})|\\ 
 	&= \int_{\mathbb{T}}\ d|\mu(e^{it})|\\
 	&= |\mu|(\mathbb{T})\\
-	&= \|\mu\|. % TODO add this to prelim?
+	&= \|\mu\|.
 \end{align*}
 \end{proof}
 The main reason we are developing these tools is to prove the F. and M. Riesz theorem.
@@ -745,7 +784,7 @@ The following lemmas show that all this is in fact possible.
 \label{FMRlemma3}
 Let $u$ be harmonic in $\mathbb{D}$ and
 \[
-	\sup_{0 < r < 1} \|u_r\|_1 = M < \infty. %TODO define u_r
+	\sup_{0 < r < 1} \|u_r\|_1 = M < \infty.
 \]
 Then there exists a unique complex Borel measure $\mu$ on $\mathbb{T}$ such that $u = P[d\mu]$.
 \end{lemma}
@@ -754,7 +793,7 @@ Then there exists a unique complex Borel measure $\mu$ on $\mathbb{T}$ such that
 \label{FMRlemma3b}
 Let $u$ be harmonic in $\mathbb{D}$ and
 \[
-	\sup_{0 < r < 1} \|u_r\|_2 = M < \infty. %TODO define u_r
+	\sup_{0 < r < 1} \|u_r\|_2 = M < \infty.
 \]
 Then there exists a unique function $f$ in $L^2(\mathbb{T})$ such that $u = P[f]$.
 \end{lemma}
@@ -772,7 +811,7 @@ exists for every $x \in X$.
 Furthermore, $\Gamma$ is linear and $\|\Gamma\| \leq M$.
 \end{lemma}
 \begin{proof}
-We have that $|\Gamma_n\ x| \leq M \|x\|$ and % TODO why do we have that???
+We have that $|\Gamma_n\ x| = \|x\| |\Gamma_n (x/\|x\|)| \leq \|x\| M$ and
 \begin{align*}
 	|\Gamma_n\ x - \Gamma_n\ y|
 	&= |\Gamma_n (x - y)|\\
@@ -804,8 +843,7 @@ Lastly
 \end{align*}
 \end{proof}
 \begin{proof}[Proof of \ref{FMRlemma3}]
-% TODO fix the Riesz rep thm ref. It's 6.19 in Rudin.
-Let $\Gamma_r$, for $r \in [0, 1[$,  be linear functionals on $C(\mathbb{T})$ defined by
+Let $\Gamma_r$, for $r \in [0, 1[$, be linear functionals on $C(\mathbb{T})$ defined by
 \[
 	\Gamma_r g = \int_{\mathbb{T}} gu_r\ d\sigma.
 \]
@@ -817,8 +855,7 @@ so
 \[
 	\|\Gamma_r\| \leq M.
 \]
-By Lemma \ref{FMRlemma31} and the Riesz representation theorem % TODO add ref
-we get a measure $\mu$ on $\mathbb{T}$ with $\|\mu\| \leq M$, and a sequence $(r_n)_{n \in \mathbb{N}}$ on $[0, 1[$ with limit $1$, such that
+By Lemma \ref{FMRlemma31} and the Riesz representation theorem we get a measure $\mu$ on $\mathbb{T}$ with $\|\mu\| \leq M$, and a sequence $(r_n)_{n \in \mathbb{N}}$ on $[0, 1[$ with limit $1$, such that
 \begin{equation}
 	\label{eq:1}
 	\lim_{n \rightarrow \infty} \int_{\mathbb{T}} gu_{r_n}\ d\sigma = \int_{\mathbb{T}}g\ d\mu
@@ -826,9 +863,8 @@ we get a measure $\mu$ on $\mathbb{T}$ with $\|\mu\| \leq M$, and a sequence $(r
 for all $g \in C(\mathbb{T})$.
 Let's now define functions $h_k$ on $\overline{\mathbb{D}}$ by $h_k(z) = u(r_kz)$.
 We get that, since $u$ is harmonic on $r\mathbb{D}$ for $r \in ]0, 1[$, the functions $h_k$ are harmonic on $\mathbb{D}$ and continuous on $\overline{\mathbb{D}}$.
-So each of them can be represented by the Poisson integral of their restriction to $\mathbb{T}$. % TODO add ref to Ramsford, solution of the Dirichlet problem, no maybe rather find it in rudin2
+So each of them can be represented by the Poisson integral of their restriction to $\mathbb{T}$ \citep[Theroem $11.9$]{rudin2}.
 Note that $h_k(e^{it}) = u_{r_k}(e^{it})$, so
-% TODO not use h. instead just looking at u_{r_n} should work.
 \begin{align*}
 	u(z)
 	&= \lim_{n \rightarrow \infty} u(r_nz)\\
@@ -873,7 +909,7 @@ If we let $r \rightarrow 1$ we get
 	\int_{\mathbb{T}}f\ d\mu = 0.
 \]
 This holds for all $f \in C(\mathbb{T})$, so the measure $\mu$ represents zero in the dual of $C(\mathbb{T})$.
-The Riesz representation theorem then tells us that $|\mu|(\mathbb{T}) = 0$, so $\mu = 0$. % TODO def |\mu|(T) in the prelim. chapter on measure theory.
+The Riesz representation theorem then tells us that $|\mu|(\mathbb{T}) = 0$, so $\mu = 0$.
 
 Now let $\lambda$ and $\nu$ be measures on $\mathbb{T}$ such that $P[d\lambda] = P[d\nu]$.
 We have that $P[d(\lambda - \nu)] = 0$, so, as shown above $\lambda - \nu = 0$.
@@ -889,7 +925,6 @@ We again use \ref{FMRlemma31} and the (other) Riesz representation theorem to sh
 \]
 for all $g$ in $L^2(\mathbb{T})$.
 The remaining calculations are unchanged.
-% TODO kannski skrifað þetta upp af því bara.
 \end{proof}
 We see by this proof that \ref{FMRlemma3b} could be generalized trivially to find a function $f$ in $L^p(\mathbb{T})$ such that $P[f] = u$ for harmonic $u$ with
 \[
@@ -991,7 +1026,6 @@ If we set $z = re^{i\theta}$ we get that
 \]
 We can use the assumption of the theorem to write $f$ as a power series by
 \begin{align*}
-% TODO Fubini?
 	f(z) 
 	&= \int_{\mathbb{T}} P(z, e^{it})\ d\mu(e^{it}) \\
 	&= \int_{\mathbb{T}} \sum_{n \in \mathbb{Z}} r^{|n|}e^{in\theta}e^{-int}\ d\mu(e^{it}) \\
@@ -1000,15 +1034,13 @@ We can use the assumption of the theorem to write $f$ as a power series by
 	&= \sum_{n = 0}^{\infty} \hat{\mu}_n z^n,
 \end{align*}
 where $\hat{\mu}_n$ is the $n$-th Fourier coefficient of $\mu$.
-This along with \ref{FMRlemma1} gives us that $f \in H^1$. % TODO make this more clear
-We can now define a $h \in L^1(\mathbb{T})$, by \ref{FMRlemma2}, such that $f = P[h]$.
-It follows from \ref{FMRlemma3} that $d\mu = h\ d\sigma$. %TODO define \sigma as Lebesgue on T scaled to 1.
-TODO
+This along with \ref{FMRlemma1} gives us that $f \in H^1$.
+We can now define a $F \in L^1(\mathbb{T})$, by \ref{FMRlemma2}, such that $f = P[F]$.
+It follows from \ref{FMRlemma3} that $d\mu = F\ d\sigma$, namely $\mu \lll m$.
 \end{proof}
 \begin{corollary}
 \label{fmrieszcor}
-%Let $A$ be the closed subspace of $C(\mathbb{T})$ that consists of all functions that are restriction from $\mathcal{A}$. % TODO makes this def global and maybe call it something else
-Every annihilating measures of $\mathcal{A}|_{\mathbb{T}}$ is absolutely continuous with regards to the Lebesgue-measure on $\mathbb{T}$. % TODO define all
+Every annihilating measures of $\mathcal{A}|_{\mathbb{T}}$ is absolutely continuous with regards to the Lebesgue-measure on $\mathbb{T}$.
 \end{corollary}
 \begin{proof}
 Let $\mu$ be an annihilating measure of $\mathcal{A}|_{\mathbb{T}}$.
@@ -1060,6 +1092,7 @@ and
 \]
 \end{lemma}
 \begin{proof}
+It suffices to show that the image of each partition is contained in a circle with radius $\varepsilon$ since each square includes a circle.
 Recall that a point $x$ in a set $A$ is a \emph{limit point of $A$} if it is in the closure of $A \setminus \{x\}$.
 We have that $K$ is compact so $f$ is uniformly continuous.
 This means we can set $\delta > 0$ such that $|f(x) - f(y)| < \varepsilon$ if $|x - y| < \delta$.
@@ -1082,10 +1115,10 @@ This is the base $2$ logarithm, specifically it satisfies $\log 2^x = x$.
 Let $E$ be a closed subset of $\mathbb{T}$ of Lebesgue-measure $0$,
 	let $f$ be a continuous function on $E$,
 	and let $T$ be a subset of $\mathbb{C}$ homeomorphic to $\overline{\mathbb{D}}$ such that $f(\overline{\mathbb{D}}) \subset T$.
-Then there exists an $F \in \mathcal{A}$, such that $F = f$ on $E$ and $F(\overline{\mathbb{D}}) \subset T$. % TODO skilgreina allt
+Then there exists an $F \in \mathcal{A}$, such that $F = f$ on $E$ and $F(\overline{\mathbb{D}}) \subset T$.
 \end{theorem}
 This will be proved as Rudin did it in his original paper \citep{rudin}.
-We will break the proof into several lemmas. % TODO how many?
+We will split up the proof into several lemmas.
 The first few lemmas are dedicated to showing the result holds for continuous simple functions, and the last lemma bridges the gap.
 \begin{lemma}
 \label{mylemma}
@@ -1106,7 +1139,7 @@ Recall from set theory that if $(X, d)$ is a metric space, $A$ is a subset of $X
 \[
 	d(x, A) = \inf_{a \in A} d(x, a).
 \]
-Furthermore, if $A$ is closed then the infimum is obtained at some of $A$, namely, there exists a point $y \in A$ such $d(x, y) = d(x, A)$. % TODO cite this
+Furthermore, if $A$ is closed then the infimum is obtained at some of $A$, namely, there exists a point $y \in A$ such $d(x, y) = d(x, A)$.
 Let $X = [0, 1]$ and $H$ be some closed set of Lebesgue-measure zero.
 We will, for reasons that will be made clear later, assume that $0, 1 \subset H$.
 We can now define function $V_H: [0, 1] \rightarrow [0, 1]$ and $H_H: [0, 1] \rightarrow [0, 1]$ such that
@@ -1136,7 +1169,7 @@ Let's first define a family of functions indexed with $a, b \in \mathbb{R}$ by
 and show they satisfy the following properties:
 \begin{enumerate}
 \item
-$f_{a, b}(a + (b - a)2^{-n}) \leq n$, % TODO shift n left or right maybe
+$f_{a, b}(a + (b - a)2^{-n}) \leq n$,
 \item
 $f_{a, b}(x) = f_{a, b}(b + a - x)$.
 \end{enumerate}
@@ -1185,7 +1218,7 @@ Let $g = g_{0, 1}$ and
 	\end{array}
 	\right .
 \]
-We can now integrate $g$ by % TODO is g measureable???????
+We can now integrate $g$ by
 \begin{align*}
 	\int g\ d\sigma
 	&= \int \lim_{n \rightarrow \infty} g_n\ d\sigma\\
@@ -1194,8 +1227,22 @@ We can now integrate $g$ by % TODO is g measureable???????
 	&= \sum_{k \in \mathbb{N}} k2^{-k}\\
 	&< \infty
 \end{align*}
-where the second equality is by monotone convergence and the last is by some test. % TODO what test???????
+where the second equality is by monotone convergence and the last inequality is by the ratio test.
 This rationale also holds for general $a$ and $b$, since $a$ does not effect the value of the integral and $b$ scales it.
+We can, as a side note, compute the limit of this series by setting
+\[
+	f(x) = \frac{2}{1 - x} = -2\sum_{n \in \mathbb{N}} x^{-k}
+\]
+and note that
+\[
+	f'(x) = 2\sum_{n \in \mathbb{N}} kx^{-k - 1},
+\]
+so the limit of the series is $f'(2)$.
+We also have that
+\[
+	f'(x) = \frac{d}{dx}\frac{2}{1 - x} = \frac{2}{(1 - x)^2}
+\]
+so $f'(2)$, and therefore the limit of the series, is $2$.
 
 Let's now go back to $f_H$.
 Note that we can locally look at $f$ as a function in $\{f_{a, b}\}_{a, b \in [0, 1]}$, that is, $f(x) = f_{V_H(x), H_H(x)}(x)$.
@@ -1242,7 +1289,6 @@ To show that $g$ is measurable it suffices to show that $(g_n)_{n \in \mathbb{N}
 We, therefore, can show that the preimage under $g_n$ of each point is measurable, since $g_n$ is simple, for each $n$.
 But the preimage is a (possibly uncountable) union of half-open intervals so it is the union of a closed set and an open set.
 So $g$ is measurable.
-% TODO is f measureable
 To show that $f$ is measurable it suffices to show that $P_{\lambda} = \{x \in [0, 1];\ f(x) < \lambda\}$ is measurable for all $\lambda$ in $[0, \infty]$ \citep[lemma $1.3.9$]{tao}.
 This trivially holds, since $P_{\lambda}$ is open.
 \begin{proof}[Proof of \ref{mylemma}]
@@ -1272,7 +1318,7 @@ Let's set $v_H$ as the conjugate harmonic of $u_H$ and define
 		\end{array}.
 	\right .
 \]
-By our construction of $u_H$ we see the $\Re g_H > 1$, so it has a well defined square root. % TODO look better at this
+By our construction of $u_H$ we see the $\Re g_H > 1$, so it has a well defined square root.
 Let's call it $h_H$ and define
 \[
 	q = \frac{h_{E_1}}{h_{E_0} + h_{E_1}}.
@@ -1314,9 +1360,9 @@ So we have shown that
 \]
 
 We have now constructed a function $q$ that maps $\overline{\mathbb{D}}$ to the ribbon $\{z;\ 0 \leq \Re z \leq 1\}$.
-We then let $\Phi$ be the conformal mapping from the ribbon $\{z;\ 0 \leq \Re z \leq 1\}$ to $\{z;\ 0 \leq \Re z \leq \Re \alpha\}$. % TODO Rudin calls these ribbons rectangles, but couldn't the imaginary part be unbounded?
+We then let $\Phi$ be the conformal mapping from the ribbon $\{z;\ 0 \leq \Re z \leq 1\}$ to $\{z;\ 0 \leq \Re z \leq \Re \alpha\}$.
 We will also choose $\Phi$ such that $\Phi(0) = 0$ and $\Phi(1) = \alpha$.
-We can then let $F = \Phi \circ q$ and conclude the proof. %TODO add ref to corollary and maybe add below it that this is allowed
+We can then let $F = \Phi \circ q$ and conclude the proof.
 
 \end{proof}
 \begin{lemma}
@@ -1344,7 +1390,7 @@ Assuming $f_0, f_1, ..., f_{n - 1}$ have been constructed such that
 	\lambda_{n - 1}(E) \subset 2^{1 - n}S
 \]
 with $\lambda_{n - 1} = f - \sum_{k = 0}^{n - 1}f_k$.
-According to \ref{somelemma} we have can write $E$ as the union of disjoint closed sets $E_1, E_2, ..., E_p$ such that the oscillation of $\lambda_{n - 1}$ is less than $2^{-n}$ on each $E_k$. % TODO make this lemma and maybe rewrite in accordance
+According to \ref{somelemma} we have can write $E$ as the union of disjoint closed sets $E_1, E_2, ..., E_p$ such that the oscillation of $\lambda_{n - 1}$ is less than $2^{-n}$ on each $E_k$.
 So we can define $Q_k \subset 2^{1 - n}S$ for $k = 1, 2, ..., p$ such that $Q_k = 2^{-n}S + a_k$ for some $a_k \in S$.
 We can choose $c_k \in Q_k \cap 2^{-n}S$ since $Q_k$ has side length $2^{-n}$ and is a subset of $2^{-n + 1}$ and both are closed.
 We can now define
@@ -1357,7 +1403,7 @@ This means we can continue the process.
 \begin{proof}[Proof of \ref{rudincarleson}]
 Let's first show the result for $T = S$.
 
-Let $f_n$ be the functions from Lemma \ref{rudinlemma3}. % TODO fix the ref
+Let $f_n$ be the functions from Lemma \ref{rudinlemma3}.
 According to Lemma \ref{rudinlemma2} we have functions $g_n \in \mathcal{A}$ which extend $f_n$ and map $\overline{\mathbb{D}}$ into $2^{-n}S$.
 We then define
 \[
@@ -1395,34 +1441,39 @@ On $E$ we have that
 so $F$ extends $f$.
 It is also a composition of functions in $\mathcal{A}$ so it is also in $\mathcal{A}$.
 \end{proof}
-%\begin{corollary}[Fatou]
-%Let $E$ be a closed subset of $\mathbb{T}$ of Lebesgue-measure $0$.
-%There exists a function $f \in \mathcal{A}$ that vanishes on $E$ and nowhere else.
-%\end{corollary}
-%\begin{proof}
-%It's clear from the Theorem % TODO add ref
-%that there exists a function $f \in \mathcal{A}$ that vanishes on $E$.
-%TODO
-%\end{proof}
-
 
 
 
 \section{A generalization of the Rudin-Carleson theorem}
 \label{section3}
-This borrows from \citep{bishop}. % TODO actually write something here
-\begin{theorem}[General Rudin-Carleson theorem]
+An obvious next step would be a Rudin-Carleson theorem in several complex variables.
+It is tempting to keep the constraints on $E$ unchanged, namely that it is of Lebesgue-measure zero, but this won't work.
+Take as an example $f: E \rightarrow \mathbb{C}$ with $E = \mathbb{T} \times \{0\}$ and $f(z, w) = \overline{z}$.
+Clearly $E$ is of Lebesgue-measure but $f$ cannot be extended.
+If we assume it could be extended to some $g = (g_1, g_2)$ in $\mathcal{A}^2$ then, by definition, $g_1$ would be holomorphic on $\mathbb{D}$ and continuous $\overline{\mathbb{D}}$.
+Its holomorphicity tells us that its integral over the boundary of $r\mathbb{T}$ for $0 < r < 1$ is zero.
+But on $\mathbb{T}$ we have that $g(z) = \overline{z}$ so its integral over $\mathbb{T}$ is not zero.
+That is, we have that
+\[
+	\lim_{r \rightarrow 1} \int_{r\mathbb{T}} g_1(z)\ dz \neq \int_{\mathbb{T}} g_1(z)\ dz
+\]
+so $g_1$ is not continuous.
+
+There is however a theorem of Bishop that gives a sufficient condition on $E$ \citep{bishop}.
+\begin{theorem}[The general Rudin-Carleson theorem]
 \label{bishopstheorem}
 Let $X$ be a compact Hausdorff space,
 	$V = (C(X), \| \cdot \|_{\infty})$,
 	$B$ be a closed subspace of $C(X)$,
-	$B^{\bot}$ be the annihilating measures of $B$, % TODO this needs to be defined
-	$S$ be a closed subset of $X$ that is $\mu$-null for all $\mu \in B^{\bot}$,
+	$B^{\bot}$ be the annihilating measures of $B$,
+	$S$ be a closed subset of $X$ that is $\mu$-null for all $\mu \in B^{\bot}$, % TODO kannski breyta í E
 	$f$ be a continuous function on $S$,
 	and $\Xi > 0$ be a continuous function on $X$ such that $|f| < \Xi$ on $S$.
 Then there exists a $F \in B$ such that $F = f$ on $S$ and $|F| < \Xi$ on $X$.
 \end{theorem}
-Let's start with the following lemma:
+The following lemma makes that proof simple.
+The proof of the lemma is split in two.
+The earlier part is to show that $f$ is in the closure of the image of the restriction mapping and the latter part shows that leads the existence of $F$.
 \begin{lemma}
 \label{bishoplemma}
 Assume $|f| < r < 1$ on $S$.
@@ -1439,10 +1490,8 @@ Note that if $f, g \in U_r$ and $t \in [0, 1]$ then
 so $tf + (1 - t)g$ is also in $U_r$, showing it is convex.
 Its closure, $V_r$, is then convex as well.
 
-By Hahn-Banach % TODO ref (convex!!!)
-we can define a bounded linear functional $\alpha$, such that $\alpha(f) > 1$ and $|\alpha| < 1$, on $V_r$.
-We can then define a measure $\mu_1$ by the Riesz representation theorem % TODO ref
-that satisfies
+By Hahn-Banach we can define a bounded linear functional $\alpha$, such that $\alpha(f) > 1$ and $|\alpha| < 1$, on $V_r$.
+We can then define a measure $\mu_1$ by the Riesz representation theorem that satisfies
 \[
 	\alpha(g) = \int g\ d\mu_1
 \]
@@ -1450,7 +1499,7 @@ for all $g \in C(S)$.
 We will refer to the associated functional on $B$ by $\beta(g) = \alpha(\phi(g))$.
 Since $\phi(g) \in V_r$ for all $g \in U_r$ we have that
 \[
-	\beta(g) = \alpha(\phi(g)) < 1,
+	|\beta(g)| = |\alpha(\phi(g))| < 1,
 \]
 for all $g \in U_r$,
 	due to the construction of $\alpha$.
@@ -1516,20 +1565,21 @@ So all requirements of \ref{bishopstheorem} are met.
 \renewcommand{\chaptername}{Appendix}
 \chapter{A further application of the general Rudin-Carleson theorem}
 \label{section4}
-% TODO cite
+Bishop's theorem can be seen as a classification of sets.
+With this in mind, and looking at the case where $X = \mathbb{T}^n$ and $B = \mathcal{A}^n|_{\mathbb{T}}$, we have the following definition.
 \begin{definition}
 \label{bigdef}
-Let $K$ be a closed subset of $S = \{z \in \mathbb{C}^n;\ |z| = 1\}$.
+Let $K$ be a closed subset of $\mathbb{T}^n = \{z \in \mathbb{C}^n;\ |z| = 1\}$.
 We then say $K$ is a
 \begin{enumerate}
 	\item \emph{zero set} if there exists a function in $f \in \mathcal{A}^n$ such that $K = f^{-1}(0)$.
-	\item \emph{peak set} if there exists a function in $f \in \mathcal{A}^n$ such that $K = f^{-1}(1)$ and $|f(z)| < 1$ for $z \in \overline{\mathbb{B}}^n \setminus K$.
+	\item \emph{peak set} if there exists a function in $f \in \mathcal{A}^n$ such that $K = f^{-1}(1)$ and $|f(z)| < 1$ for $z \in \overline{\mathbb{D}}^n \setminus K$.
 	\item \emph{interpolation set} if every continuous function on $K$ extends via $\mathcal{A}^n$. 
-	\item \emph{peak-interpolation set} if every non-zero continuous function $f$ on $K$ extends to $F \in \mathcal{A}^n$ such that $|f(z)| < \|F\|$ for $z \in \overline{\mathbb{B}}^n \setminus K$.
+	\item \emph{peak-interpolation set} if every non-zero continuous function $f$ on $K$ extends to $F \in \mathcal{A}^n$ such that $|f(z)| < \|F\|$ for $z \in \overline{\mathbb{D}}^n \setminus K$.
 	\item \emph{null set} if $K$ has measure zero with regards to all annihilating measures of $\mathcal{A}^n$.
 	\item \emph{totally null} if $K$ has measure zero with regards to all measure $\mu$ such that
 			\[
-				f(0) = \int_{\mathbb{B}} f\ d\mu
+				f(0) = \int_{\mathbb{D}} f\ d\mu
 			\]
 			for all $f \in \mathcal{A}^n$.
 \end{enumerate}
@@ -1537,7 +1587,7 @@ We then say $K$ is a
 \begin{theorem}
 	The six classes of sets described in \ref{bigdef} are equivalent.
 \end{theorem}
-The first few sections of chapter $10$ in \citep{rudin3} are dedicated to prove this large theorem.
+The first few sections of chapter $10$ in \citep{rudin3} are dedicated to proving this large theorem.
 One implication, namely that all null sets are peak-interpolation sets, follows directly from \ref{bishopstheorem}.
 
 \bibliography{refs}
